SLS: Add expired time for telegram invitation
